# rrn

./: .SCRINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  build_linux_macos.sh  main.cpp  rrn.cpp  rrn.hpp  rrn.pro  todo.md
rrn/rrn.xcodeproj/: project.pbxproj
rrn/rrn.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
rrn/rrn.xcodeproj/project.xcworkspace/xcuserdata/smk.xcuserdatad/: UserInterfaceState.xcuserstate
rrn/rrn.xcodeproj/xcshareddata/xcschemes/: rrn.xcscheme
rrn/rrn.xcodeproj/xcuserdata/smk.xcuserdatad/xcschemes/: xcschememanagement.plist
